<?xml version="1.0"?>
<package>

  <name>behavior_tree_learning</name>

  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="45998292+jstyrud@users.noreply.github.com">jstyrud</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
